fixed "not showing skeleton on mobile " issue

--- a/src/style/productcard.css
+++ b/src/style/productcard.css
@@ -88,6 +88,10 @@
     }
     .product-details{
       margin-top:8px;
+      padding-left: 0px;
+    }
+    .skeleton-details{
+      min-width: 80vw;
     }
   }
 
